2004-09-29  Dom Lachowicz <cinamod@hotmail.com>

	* moz-plugin/moz-plugin.c: Fix bug #154083
	
2004-09-26  Dom Lachowicz <cinamod@hotmail.com>

	* gdk-pixbuf-loader/io-svg.c: Sanity checks
	
2004-09-25  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c Part of bug 153671
	* *.c: Prepare for some gettext lovin'
	
2004-09-23  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-shapes.c, rsvg-paint-server.c: Made objectBoundingBox for pservers to be calculated in user coordinates instead of pixel coordinates, this allows for rotation and stuff.
	
2004-09-14  Dom Lachowicz <cinamod@hotmail.com>

	* io-svg.c: Only emit prepared() once, add more mime-types and
	file extensions, and (optionally) simulate progressive loading
	
2004-09-10  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.[ch]: rsvg_init(), rsvg_term(). Cuts down on libxml2 memory leaks
	* test-*.c: Use above fns

2004-08-31  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-text.c: made text not cause crashes

2004-08-30  Dom Lachowicz <cinamod@hotmail.com>

	* test-display.c: Ability to copy the current SVG's URI or file path
	
2004-08-28  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-css.c: Something closer to correct for ex-height
	
2004-08-28  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-shapes.c: added an optional clippath around svg elements

2004-08-27  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-shapes.c: Implemented preserveAspectRatio as per the standard
	* rsvg-shapes.c: Implemented <symbols>s

2004-08-22  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c, rsvg.h, rsvg-private.h: Return metadata to caller if requested
	* rsvg-private.h: Compiler hints to de-bloat the RsvgState struct
	
2004-08-22  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-shapes.c: made <image>s <use>able
	* rsvg.c, rsvg-shapes.c: I've been talking about it for a while now, but I finally got the courage to do it: librsvg now fully passes the contents of the file before it renders a single pixel. 
